--- a/_includes/css/common.css
+++ b/_includes/css/common.css
@@ -76,10 +76,12 @@
 
 .rot {
   display: inline-block;
+  margin: 0 8px;
 }
 
 .puni {
   display: inline-block;
+  margin: 0 8px 0 0;
 }
 
 /* ---- mouse stalker */
