--- a/_includes/css/index.css
+++ b/_includes/css/index.css
@@ -25,5 +25,6 @@
 /* --- strong texts */
 
 .new {
+  margin-left: 6px;
   color: #f00;
 }
