--- a/_includes/css/links.css
+++ b/_includes/css/links.css
@@ -2,4 +2,5 @@
   font-style: italic;
   background-color: #ff0;
   color: #000;
+  margin-left: 6px;
 }
